parser/sample_tests/ours/functions.txt

*** Error line 4.
int tester(int d) {
          ^
*** syntax error

